# django-inventory

./: LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish-to-test-pypi.yml  publish.yml
django_ecomstore_inventory.egg-info/: PKG-INFO  SOURCES.txt
django_inventory.egg-info/: PKG-INFO  SOURCES.txt
github/workflows/: publish-to-test-pypi.yml
inventory/: models.py  views.py
inventory/migrations/: 0002_alter_inventory_options.py
inventory/static/inventory/payment/: checkout.js
inventory/templates/inventory/partials/: related_products.html
src/django_ecomstore_inventory.egg-info/: PKG-INFO  SOURCES.txt
src/inventory/: admin.py  views.py
src/inventory/static/inventory/css/: main.css
src/inventory/templates/inventory/: category.html
src/inventory/templates/inventory/partials/: shop-element.html
