[metadata]
name = django-inventory
version = 0.1
description = An ecommerce inventory Django app.
long_description = file: README.rst
author = Oseni Ayomide Daniel
author_email = oseniayomide57@gmail.com
maintainer = Oseni Ayomide Daniel
maintainer_email = oseniayomide57@gmail.com
license = BSD-3-Clause  #OR MIT Example license
url='https://github.com/Oseni03/django-inventory',
keywords = django ecommerce inventory store
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
    Django >= 4.0  # Replace "X.Y" as appropriate