[metadata]
name = django-ecomstore-inventory
version = 0.0.1
description = An ecommerce inventory Django app.
long_description = file: README.md
long_description_content_type = text/markdown
author = Oseni Ayomide Daniel
author_email = oseniayomide57@gmail.com
maintainer = Oseni Ayomide Daniel
maintainer_email = oseniayomide57@gmail.com
license = MIT  #OR BSD-3-Clause Example license
url = https://github.com/Oseni03/django-inventory
project_urls = 
  Bug Tracker = https://github.com/Oseni03/django-inventory/issues 
keywords = ["django", "ecommerce", "inventory", "store"]
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
  = src
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
    Django >= 4.0  # Replace "X.Y" as appropriate

[options.packages.find]
where = src